// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tests File GifExpertApp Must show a list of categories 1`] = `
<Fragment>
  <h2>
    GifExpertApp
  </h2>
  <AddCategory
    setCategories={[Function]}
  />
  <hr />
  <GifGrid
    category="Space"
    key="Space"
  />
  <GifGrid
    category="Andromada"
    key="Andromada"
  />
</Fragment>
`;

exports[`Tests File GifExpertApp Show component <GifExpertApp/> 1`] = `
<Fragment>
  <h2>
    GifExpertApp
  </h2>
  <AddCategory
    setCategories={[Function]}
  />
  <hr />
</Fragment>
`;
